style.css
body{
    font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
    display: flex;
    flex-direction: column;
    flex: 1;
    justify-content: space-between;
    margin: 0;
    border: 0;
}

.header{
    display: flex;
    flex-direction: column;
    background-color: #1f2937;
    justify-content: space-between;
    padding: 20px 200px 20px 200px;
    border: 0;
    margin: 0;
}

.heading{
    display: flex;
    justify-content: space-between;
}

.links{
    display: flex;
    gap: 8px;
}

a{
    text-decoration: none;
    color: white;
}

li{
    list-style-type: none;
}

.logo{
    font-size: 24px;
    color: #f9faf8;
}

.title{
    font-size: 48px;
    font-weight: bold;
    color: #f9faf8;
}

.paragraph{
    font-size: 18px;
    color: #e5e7eb;
}

.signup{
    display: flex;
    justify-content: space-between;
    gap: 40px;
}

.left{
    display: flex;
    flex-direction: column;
    justify-content: center;
    gap: 8px;
}

